umol-io/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@gdb_0080_COCC1(N)CC1_a362.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_opensmiles
category: basic_opensmiles
basic_opensmiles:
  success: true
  summary:
    sum_formula: C5NO
    atom_count: 7
    bond_count: 7
